# chimerax-clipper

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE.md  Makefile  README.md  bundle_info.xml  bundle_info.xml.bak  make_docs.bat  make_win.bat  pyproject.toml
.atom/: config.cson
docs/: CORECIF_BUG_REPORT.md  MODE2_SCORING_SPEC.md  Makefile  SYMMETRY_EXPANSION_BRIEF.md  make.bat
docs/source/: clipper.rst  conf.py
docs/source/api/: clipper.rst
docs/source/commands/: clipper.rst
license/: license_header.c++  license_header.py  license_header_chimerax-clipper.c++
src/: __init__.py  _util.cpp  clipper_mtz.py  clipper_util.py  cmd.py  crystal.py  crystal_exp.py  data_tree.py  delayed_reaction.py  main.py  map_calc.py  mousemodes.py  sanity_check.py  scattering.py  structurestepper.py  sym_realize.py  symmetry.py  util.py
src/bindings/: _clipper.cpp  clipper_pybind11.cpp  numpy_helper.h  type_conversions.h  wrap_atomsf.cpp  wrap_ccp4_mtz_io.cpp  wrap_cell.cpp  wrap_clipper_cif_io.cpp  wrap_clipper_stats.cpp  wrap_clipper_types.cpp  wrap_containers.cpp  wrap_coords.cpp  wrap_derivs.cpp  wrap_hkl_data.cpp  wrap_hkl_datatypes.cpp  wrap_hkl_info.cpp  wrap_nxmap.cpp  wrap_nxmap_operator.cpp  wrap_resol_fns.cpp  wrap_symop.cpp  wrap_unit_cell.cpp  wrap_xmap.cpp
src/bindings/ext/: wrap_xtal_mgr.cpp
src/clipper_ext/: aniso_scale.h  chimerax_bridge.h  edcalc_ext.cpp  edcalc_ext.h  edcalc_ext.o.d  french_wilson.cpp  french_wilson.h  scaling.h  sfcalc_obs_vdw.cpp  sfcalc_obs_vdw.h  sfcalc_obs_vdw.h.bak  sfcalc_obs_vdw_new.cpp  sfcalc_obs_vdw_new.h  util.h  vdw.h  xtal_mgr.cpp  xtal_mgr.h  xtal_mgr.o.d
src/contour/: contour.h  contour_threaded.cpp  contourdata.cpp  contourdata.h
src/demo/: README.txt  cod_1100908.hkl  cod_2213867.cif
src/diff/: __init__.py  _checks.py  assembled_cache.py  crystal.py  reference.py  state.py  targets.py
src/docs/: .gitignore
src/geometry/: __init__.py  symmetry_axes.py  util.py
src/graphics/: __init__.py  hkl_plot.py
src/include/ccp4/: imex.h
src/io/: __init__.py  cif_sf_read.py  fetch_cif.py  fragments.py  mtz_read.py  mtz_write.py  reflection_classify.py  small_molecule.py
src/lib/fftw2xc_win/: fftw2xc_single_msvs.lib  mkl_fftw2.dll.exp  mkl_fftw2.exp  mkl_fftw2.lib
src/maps/: __init__.py  map_handler_base.py  map_mgr.py  mapset_base.py  mask_handler.py  nxmapset.py  small_molecule_map.py  xmapset.py
src/maps/_maps/: mask.cpp
src/refine/: __init__.py  bfactor_occ.py
src/reflection_tools/: __init__.py  french_wilson.py  r_factor.py  r_free.py
src/symmetry_cpp/: symmetry.cpp  symmetry.h  symmetry.o.d
src/tests/: __init__.py  cod_1100908.cif  cod_2010010.cif  cod_2213867.hkl  test_small_molecule.py  test_sym.py  test_xtal_mgr.py
src/ui/: chooser_widgets.py  mtz_browser.py
src_cpp/: molc.h
src_cpp/_maps/: mask.cpp
src_cpp/bindings/: clipper_pybind11.cpp  symops.h  unit_cell.h  wrap_atomsf.cpp  wrap_ccp4_mtz_io.cpp  wrap_clipper_util.cpp  wrap_coords.cpp  wrap_hkl_info.cpp  wrap_map_utils.cpp  wrap_resol_fns.cpp  wrap_rtop_base.h  wrap_spacegroup.cpp  wrap_symops.cpp  wrap_unit_cell.cpp  wrap_xmap.cpp
src_cpp/bindings/contrib/: wrap_sfcalc.cpp
src_cpp/bindings/ext/: wrap_adp_occ_refiner.cpp  wrap_xray_gradient.cpp  wrap_xtal_mgr.cpp
src_cpp/clipper_ext/: adp_occ_refiner.cpp  adp_occ_refiner.h  adp_occ_types.h  aniso_scale.h  chimerax_bridge.cpp  chimerax_bridge.h  edcalc_ext.cpp  edcalc_ext.h  french_wilson.cpp  french_wilson.h  imex.h  math_ext.h  scaling.h  sfcalc_obs_vdw.cpp  sfcalc_obs_vdw.cpp.bak  sfcalc_obs_vdw.h  sfcalc_obs_vdw_new.cpp  typedefs.h  util.h  vdw.cpp  vdw.h  xray_gradient.cpp  xray_gradient.h  xtal_mgr.cpp  xtal_mgr.h
src_cpp/contour/: contour.cpp  contour_threaded.cpp
src_cpp/include/ccp4/: cmap_labels.h  library_file.h
src_cpp/include/clipper/cns/: cns_hkl_io.h
src_cpp/include/clipper/contrib/: mapfilter.h
src_cpp/include/clipper/core/: clipper_stats.h  fftmap.h  hkl_lookup.h  nxmap_operator.h  rotation.h
src_cpp/include/clipper/minimol/: minimol_io.h
src_cpp/include/clipper/mmdb/: clipper_mmdb.h
src_cpp/include/clipper/phs/: phs_io.h
src_cpp/include/clipper_ext/: adp_occ_refiner.h  adp_occ_types.h  chimerax_bridge.h  edcalc_ext.h  scaling.h  sfcalc_obs_vdw.h
src_cpp/include/mmdb2/: mmdb_chain.h  mmdb_io_stream.h  mmdb_root.h  mmdb_uddata.h
src_cpp/symmetry/: symmetry.cpp
src_cpp/util/: _util.cpp
tests/: test_diff_gradients.py  test_small_molecule_ensemble.py  test_sym.py
tools/: chimerax_clipper_parallel_build.py  install_parallel_build_hook.py
